--- a/seluruh_kader.html
+++ b/seluruh_kader.html
@@ -206,7 +206,7 @@
             <h4>Nur Haliza</h4>
             <span>Wakil Sekretaris Umum PP</span>
             <p>
-              Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+              Mengeluh hanya membuat kita lupa cara bersyukur
             </p>
             <div class="social">
               <a href="https://www.instagram.com/nur19haliza/" target="_blank"><i class="bi bi-instagram"></i></a>
