--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item filter-mingguan">
               <div class="portfolio-wrap">
-                <img src="assets/img/kegiatan/kegiatan2.jpg" class="img-fluid" alt="">
+                <img src="assets/img/kegiatan/kegiatan2.jpeg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Pelatihan Design Canva</h4>
                   <p>06/12/2023</p>
